update the bugs on the Makefiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ project(MOYFClient)
 cmake_minimum_required(VERSION 3.19)
 
 add_subdirectory(MOYFNetworking)
+link_libraries(ws2_32)
+link_libraries(wsock32)
 
 add_subdirectory(MOYFClient)
 add_subdirectory(MOYFServer)
