--- a/MOYFNetworking/CMakeLists.txt
+++ b/MOYFNetworking/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
 project(MOYFNetworking)
+link_libraries(ws2_32)
+link_libraries(wsock32)
 
 set(CMAKE_CXX_STANDARD 20)
 
